// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonDiff Component displays a diff when there are differences between oldJson and currentJson and snapshot 1`] = `
<DocumentFragment>
  <div
    class="json-diff-container "
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
    >
      <div>
        <div
          class="jsondiffpatch-delta jsondiffpatch-node jsondiffpatch-child-node-type-object"
        >
          <ul
            class="jsondiffpatch-node jsondiffpatch-node-type-object"
          >
            <li
              class="jsondiffpatch-modified"
              data-key="key"
            >
              <div
                class="jsondiffpatch-property-name"
              >
                key
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-left-value"
              >
                <pre>
                  "oldValue"
                </pre>
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-right-value"
              >
                <pre>
                  "newValue"
                </pre>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`JsonDiff Component displays initial state message for empty currentJson and snapshot 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    style="font-style: italic;"
  >
    Initial state - no comparison available
  </p>
</DocumentFragment>
`;

exports[`JsonDiff Component displays no changes message when oldJson and currentJson are the same 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    style="font-style: italic;"
  >
    QueryKey data not modified on this state change
  </p>
</DocumentFragment>
`;

exports[`JsonDiff Component toggles visibility based on isHidden prop 1`] = `
<DocumentFragment>
  <div
    class="json-diff-container jsondiffpatch-unchanged-hidden"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
    >
      <div>
        <div
          class="jsondiffpatch-delta jsondiffpatch-node jsondiffpatch-child-node-type-object"
        >
          <ul
            class="jsondiffpatch-node jsondiffpatch-node-type-object"
          >
            <li
              class="jsondiffpatch-modified"
              data-key="key"
            >
              <div
                class="jsondiffpatch-property-name"
              >
                key
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-left-value"
              >
                <pre>
                  "value"
                </pre>
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-right-value"
              >
                <pre>
                  "newValue"
                </pre>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`JsonDiff Component toggles visibility based on isHidden prop 2`] = `
<DocumentFragment>
  <div
    class="json-diff-container "
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
    >
      <div>
        <div
          class="jsondiffpatch-delta jsondiffpatch-node jsondiffpatch-child-node-type-object"
        >
          <ul
            class="jsondiffpatch-node jsondiffpatch-node-type-object"
          >
            <li
              class="jsondiffpatch-modified"
              data-key="key"
            >
              <div
                class="jsondiffpatch-property-name"
              >
                key
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-left-value"
              >
                <pre>
                  "value"
                </pre>
              </div>
              <div
                class="jsondiffpatch-value jsondiffpatch-right-value"
              >
                <pre>
                  "newValue"
                </pre>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
